--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.6.1",
+    "babel-jest": "^24.8.0",
     "babel-preset-airbnb": "^1.0.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.4.3",
     "chai-as-promised": "^5.3.0",
     "chai-http": "^3.0.0",
     "csx": "^4.0.0",
-    "enzyme": "^2.4.1",
+    "enzyme": "^2.9.1",
+    "enzyme-to-json": "^3.4.0",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-config-loopback": "^4.0.0",
@@ -48,10 +50,11 @@
     "eslint-plugin-lodash-fp": "^2.1.3",
     "eslint-plugin-react": "^6.2.0",
     "file-loader": "^0.11.2",
+    "jest": "^24.8.0",
     "less": "^2.7.1",
     "less-plugin-autoprefix": "^1.5.1",
     "mocha": "^3.0.2",
-    "react-addons-test-utils": "^15.6.0",
+    "react-addons-test-utils": "^15.6.2",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.9"
